# chatgpt-cli

./: Cargo.toml  LICENSE  default.nix  shell.nix
src/: README.md  main.rs  structs.rs
