[package]
name = "chatgpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
